<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="email">kaushalvasava.app.feedback@gmail.com</string>

    <string name="previous_music">Previous music</string>
    <string name="next_music">Next music</string>
    <string name="play_music">Play music</string>
    <string name="mute_music">Mute music</string>
    <string name="share_music">Share</string>
    <string name="share_app">Share App</string>
    <string name="favorite_music">Favorite music</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="equalizer">Equalizer</string>
    <string name="history">Recent</string>
    <string name="favourite">Favourites</string>
    <string name="playlist">Playlists</string>
    <string name="add_song">Add Songs</string>
    <string name="remove_all">Remove all</string>
    <string name="mail_subject">Write problem,error,suggestion etc.</string>
    <string name="email_address">Email address(Optional)</string>
    <string name="mail_description">Type your problem in detail</string>
    <string name="submit">Submit</string>
    <string name="theme">Theme</string>
    <string name="feedback">Feedback</string>
    <string name="create_playlist">Create playlist</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="sorting_option">Sorting Option</string>
    <string name="view_item">Layout</string>
    <string name="first_timer">15 Minute</string>
    <string name="second_timer">30 Minute</string>
    <string name="third_timer">1 Hour</string>
    <string name="name">Name</string>
    <string name="by_date">Modification date</string>
    <string name="by_size">Size</string>
    <string name="by_time_played">No. of time played</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="details">Details</string>
    <string name="delete_from_device">Delete from device</string>
    <string name="clear_history">Clear history</string>
    <string name="select_all">Select All</string>
    <string name="file_provider">lahsuak.sangeetmusicplayer.fileprovider</string>
    <string name="sequential">Sequential</string>
    <string name="repeat">Repeat</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="total_songs">Songs : %d</string>
    <string name="please_grant_permission">Please allow read permission</string>
    <string name="grant">Allow</string>
</resources>