<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/name"
        android:id="@+id/by_name"
        app:showAsAction="never"/>
    <item
        android:title="@string/by_date"
        android:id="@+id/by_date"
        app:showAsAction="never"/>
    <item
        android:title="@string/by_size"
        android:id="@+id/by_size"
        app:showAsAction="never"/>
    <item android:id="@+id/by_artist"
        android:title="Artist"
        app:showAsAction="never"
        />
    <item android:id="@+id/by_album"
        android:title="Album"
        app:showAsAction="never"
        />
    <item android:id="@+id/by_composer"
        android:title="Composer"
        app:showAsAction="never"
        />

</menu>